fixing about overflow issue

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -633,7 +633,6 @@ body
 		background: $clr4
 		height: auto
 		margin: .5em 0 0 0
-		overflow: hidden
 		padding-bottom: 1em
 		width: 100%
 		h1
